--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "9.0.7",
+    "@angular/common": "9.0.7",
+    "@angular/compiler": "9.0.7",
+    "@angular/core": "9.0.7",
+    "@angular/forms": "9.0.7",
+    "@angular/platform-browser": "9.0.7",
+    "@angular/platform-browser-dynamic": "9.0.7",
+    "@angular/router": "9.0.7",
+    "@popperjs/core": "^2.11.6",
+    "@types/jasmine": "2.8.19",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "12.20.55",
+    "bootstrap": "^5.2.3",
+    "core-js": "2.6.12",
+    "rxjs": "6.5.5",
+    "tslib": "1.14.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
